# otus-qa-course

./: .gitignore  README.md  pyproject.toml
pages/: base_page.py
tests/: conftest.py  open_site_test.py
